<resources>
    <string name="app_name">Daily Tarot</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up_button">Sign Up!</string>
    <string name="verify">Verify</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify_button">Verify!</string>
    <string name="login">Login</string>
    <string name="login_button">Login!</string>
    <string name="move_to_sign_up_page">Move to sign up page!</string>
    <string name="view_all_cards">View All Cards</string>
    <string name="viewing_all_cards">All Cards</string>
    <string name="image_value">Image of Tarot Card</string>
    <string name="tarot_name">Tarot Name</string>
    <string name="view_my_reading">View My Reading</string>
    <string name="draw_cards">Draw Cards</string>
    <!--    <string name="drawer_open">Open navigation drawer</string>-->
    <!--    <string name="drawer_close">Close navigation drawer</string>-->
    <string name="open_settings">Open settings</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="watch_ad">Get Another Reading</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="reading">Reading</string>
    <string name="about">About Us</string>
    <string name="library">Library</string>
    <string name="header">Header</string>
    <string name="past_readings">Past Readings</string>
    <string name="draw_cards_interpretation">Draw Cards To Get a Card Interpretation</string>
    <string name="deck">Deck of Cards</string>
    <string name="drawn_card_one">First Drawn Card</string>
    <string name="second_drawn_card">Second Drawn Card</string>
    <string name="third_drawn_card">Third Drawn Card</string>
    <string name="card_up">Up Description</string>
    <string name="card_rev">Reverse Description</string>
    <string name="description">Card Description</string>
    <string name="select_card_style">Select Card Style</string>
    <string name="gold">Gold Theme</string>
    <string name="light">Light Theme</string>
    <string name="save_settings">Save Settings</string>
    <string name="light_theme">Light Theme Card Image</string>
    <string name="gold_theme">Gold Theme Card Image</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="welcome">Welcome to Daily Tarot!</string>
    <string name="login_signup">Login or Sign Up</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="my_past_readings">My Past Readings</string>
    <string name="card_one">Card One</string>
    <string name="card_two">Card Two</string>
    <string name="card_three">Card Three</string>
    <string name="meaning_up">Meaning Up</string>
    <string name="meaning_down">Meaning Down</string>
    <string name="main_description">Main Description</string>
    <string name="card_background">Card Background</string>
    <string name="welcome_text">Welcome To Daily Tarot</string>
    <string name="instructions_text">Head to the Reading page to get your daily reading or the View all Cards section for further information on any card!</string>
    <string name="view_interpretation">View Interpretation</string>
    <string name="interpretation">Placeholder interpretation.</string>
    <string name="close">Close</string>
    <string name="gold_themed_tarot_card">Gold Themed Tarot Card</string>
    <string name="light_themed_tarot_card">Light Themed Tarot Card</string>
    <string name="cover_description">back cover of gold theme deck</string>
    <string name="ar00_light_description">the fool light card</string>
    <string name="card_of_the_day">Card of the Day</string>
    <string name="more_info">More Information</string>
    <string name="daily_reading">Daily Reading</string>
    <string name="reading_description">Classic three card spread. Use your intuition or view an interpretation of your reading.</string>
    <string name="card_of_day_description">Draw a card that describes your day. View detailed description and possible meanings.</string>
    <string name="view_all_cards_desc">View all cards of major and minor arcana. Select any card to learn more.</string>
    <string name="tarot_quiz">Tarot Quiz</string>
    <string name="quiz_text">Test and improve your knowledge of Tarot Card meanings to improve your own readings!</string>
    <string name="card_four">Card Four</string>
    <string name="quiz_question">Which card is most associated with:</string>
    <string name="placeholder">Placeholder Text</string>
    <string name="quiz">Tarot Quiz</string>
    <string name="current_streak">Current Streak:</string>
    <string name="longest_streak">Longest Streak:</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="sumbit">Submit Answer</string>
    <string name="tap_hold">🔎 Tap and Hold to Peek Card Details</string>
    <string name="custom_spread">Custom Spread</string>
    <string name="help_button">Help Button</string>
    <string name="lock_layout">Lock Layout</string>
    <string name="reset_spread">Reset Layout</string>
    <string name="instructions">Instructions</string>
    <string name="custom_spread_desc">Create your own custom spread layout with up to 9 cards.</string>
    <string name="custom_tap_hold">Tap and Hold Face Up Card to Peek Details</string>
    <string name="custom_instructions_text">
        1. Drag cards from the deck image into the gold bordered area (up to 9 cards).\n
        2. Once the cards are laid out, tap the "Lock Layout" button. \n
        3. Tap each card to flip it face up. Touch and hold a face up card to view details about the card. \n
        4. Hit the reset button to create a new custom layout.
    </string>
    <string name="enable_notifications">Enable Notifications:</string>
    <string name="user_settings_label">Settings</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="rate_app">Rate This App</string>

</resources>