<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CardItem"
    android:layout_width="120dp"
    android:layout_height="205dp">

    <ImageView
        android:id="@+id/CardDetailActivitySingleCardImageView"
        android:layout_width="120dp"
        android:layout_height="205dp"
        android:contentDescription="@string/image_value"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cover" />

</androidx.constraintlayout.widget.ConstraintLayout>