...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/night_sky_gradient"
            tools:context=".activities.ViewAllCardsActivity">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ViewAllCardsActivityRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="10dp"
...
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/MainActivityNavigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/navigation_menu"
            tools:ignore="VisualLintBounds" />

...
